refactor: Common static analysis issues
Co-authored-by: Moderne <team@moderne.io>