@@ -27,7 +27,6 @@ import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.ldap.NameNotFoundException;
-import org.springframework.ldap.core.AttributesMapper;
 import org.springframework.ldap.core.LdapTemplate;
 import org.springframework.ldap.itest.AbstractLdapTemplateIntegrationTest;
 import org.springframework.ldap.itest.transaction.compensating.manager.DummyException;
@@ -38,7 +37,6 @@ import org.springframework.orm.hibernate5.HibernateTemplate;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 
-import javax.naming.NamingException;
 import javax.naming.directory.Attributes;
 import java.util.List;
 
@@ -75,7 +73,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		}
 
 		OrgPerson person = new OrgPerson();
-		person.setId(new Integer(1));
+		person.setId(Integer.valueOf(1));
 		person.setLastname("Person");
 		person.setFullname("Some Person");
 		person.setDescription("Sweden, Company1, Some Person");
@@ -108,7 +106,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	public void testCreateWithException() {
 		OrgPerson person = new OrgPerson();
 
-		person.setId(new Integer(2));
+		person.setId(Integer.valueOf(2));
 		person.setDescription("some description");
 		person.setFullname("Some testperson");
 		person.setLastname("testperson");
@@ -136,7 +134,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 
 		List result = hibernateTemplate.findByNamedParam("from OrgPerson person where person.lastname = :lastname",
 				"lastname", person.getLastname());
-		assertThat(result.size() == 0).isTrue();
+		assertThat(result.isEmpty()).isTrue();
 
 	}
 
@@ -144,7 +142,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	public void testCreate() {
 		OrgPerson person = new OrgPerson();
 
-		person.setId(new Integer(2));
+		person.setId(Integer.valueOf(2));
 		person.setDescription("some description");
 		person.setFullname("Some testperson");
 		person.setLastname("testperson");
@@ -157,7 +155,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		person = null;
 		log.debug("Verifying result");
 		Object ldapResult = ldapTemplate.lookup("cn=some testperson, ou=company1, ou=Sweden");
-		OrgPerson fromDb = (OrgPerson) this.hibernateTemplate.get(OrgPerson.class, new Integer(2));
+		OrgPerson fromDb = (OrgPerson) this.hibernateTemplate.get(OrgPerson.class, Integer.valueOf(2));
 		assertThat(ldapResult).isNotNull();
 		assertThat(fromDb).isNotNull();
 	}
@@ -165,7 +163,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	@Test
 	public void testUpdateWithException() {
 		String dn = "cn=Some Person,ou=company1,ou=Sweden";
-		OrgPerson originalPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson originalPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		originalPerson.setLastname("fooo");
 		try {
 			dummyDao.updateWithException(originalPerson);
@@ -177,15 +175,13 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 
 		log.debug("Verifying result");
 
-		Object ldapResult = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("sn").get()).as("Person").isNotNull();
-				assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person");
-				return new Object();
-			}
+		Object ldapResult = ldapTemplate.lookup(dn, attributes -> {
+			assertThat(attributes.get("sn").get()).as("Person").isNotNull();
+			assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person");
+			return new Object();
 		});
 
-		OrgPerson notUpdatedPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson notUpdatedPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		assertThat(notUpdatedPerson.getLastname()).isEqualTo("Person");
 		assertThat(notUpdatedPerson.getDescription()).isEqualTo("Sweden, Company1, Some Person");
 
@@ -196,22 +192,20 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	@Test
 	public void testUpdate() {
 		String dn = "cn=Some Person,ou=company1,ou=Sweden";
-		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		person.setLastname("Updated Person");
 		person.setDescription("Updated description");
 
 		dummyDao.update(person);
 
 		log.debug("Verifying result");
-		Object ldapResult = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("sn").get()).isEqualTo("Updated Person");
-				assertThat(attributes.get("description").get()).isEqualTo("Updated description");
-				return new Object();
-			}
+		Object ldapResult = ldapTemplate.lookup(dn, attributes -> {
+			assertThat(attributes.get("sn").get()).isEqualTo("Updated Person");
+			assertThat(attributes.get("description").get()).isEqualTo("Updated description");
+			return new Object();
 		});
 
-		OrgPerson updatedPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson updatedPerson = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		assertThat(updatedPerson.getLastname()).isEqualTo("Updated Person");
 		assertThat(updatedPerson.getDescription()).isEqualTo("Updated description");
 		assertThat(ldapResult).isNotNull();
@@ -221,7 +215,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	public void testUpdateAndRenameWithException() {
 		String dn = "cn=Some Person2,ou=company1,ou=Sweden";
 		String newDn = "cn=Some Person2,ou=company2,ou=Sweden";
-		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		person.setLastname("Updated Person");
 		person.setDescription("Updated description");
 
@@ -244,11 +238,9 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		}
 
 		// Verify that original entry was not updated.
-		Object object = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person2");
-				return new Object();
-			}
+		Object object = ldapTemplate.lookup(dn, attributes -> {
+			assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person2");
+			return new Object();
 		});
 		assertThat(object).isNotNull();
 	}
@@ -261,11 +253,9 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		dummyDao.updateAndRename(dn, newDn, "Updated description");
 
 		// Verify that entry was moved and updated.
-		Object object = ldapTemplate.lookup(newDn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("description").get()).isEqualTo("Updated description");
-				return new Object();
-			}
+		Object object = ldapTemplate.lookup(newDn, attributes -> {
+			assertThat(attributes.get("description").get()).isEqualTo("Updated description");
+			return new Object();
 		});
 
 		assertThat(object).isNotNull();
@@ -284,12 +274,10 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		}
 
 		// Verify result - check that the operation was properly rolled back
-		Object result = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("sn").get()).isEqualTo("Person");
-				assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person");
-				return new Object();
-			}
+		Object result = ldapTemplate.lookup(dn, attributes -> {
+			assertThat(attributes.get("sn").get()).isEqualTo("Person");
+			assertThat(attributes.get("description").get()).isEqualTo("Sweden, Company1, Some Person");
+			return new Object();
 		});
 
 		assertThat(result).isNotNull();
@@ -302,12 +290,10 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 		dummyDao.modifyAttributes(dn, "Updated lastname", "Updated description");
 
 		// Verify result - check that the operation was not rolled back
-		Object result = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				assertThat(attributes.get("sn").get()).isEqualTo("Updated lastname");
-				assertThat(attributes.get("description").get()).isEqualTo("Updated description");
-				return new Object();
-			}
+		Object result = ldapTemplate.lookup(dn, attributes -> {
+			assertThat(attributes.get("sn").get()).isEqualTo("Updated lastname");
+			assertThat(attributes.get("description").get()).isEqualTo("Updated description");
+			return new Object();
 		});
 
 		assertThat(result).isNotNull();
@@ -316,7 +302,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	@Test
 	public void testUnbindWithException() {
 		String dn = "cn=Some Person,ou=company1,ou=Sweden";
-		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 
 		try {
 			// Perform test
@@ -329,14 +315,9 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 
 		person = null;
 		// Verify result - check that the operation was properly rolled back
-		Object ldapResult = ldapTemplate.lookup(dn, new AttributesMapper() {
-			public Object mapFromAttributes(Attributes attributes) throws NamingException {
-				// Just verify that the entry still exists.
-				return new Object();
-			}
-		});
+		Object ldapResult = ldapTemplate.lookup(dn, attributes -> new Object());
 
-		person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1)); // will
+		person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1)); // will
 		// throw
 		// exception
 		// of
@@ -352,7 +333,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 	public void testUnbind() {
 		String dn = "cn=Some Person,ou=company1,ou=Sweden";
 		// Perform test
-		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, new Integer(1));
+		OrgPerson person = (OrgPerson) this.hibernateTemplate.load(OrgPerson.class, Integer.valueOf(1));
 		dummyDao.unbind(person);
 
 		try {
@@ -364,7 +345,7 @@ public class ContextSourceAndHibernateTransactionManagerIntegrationTest extends 
 			assertThat(true).isTrue();
 		}
 
-		person = (OrgPerson) this.hibernateTemplate.get(OrgPerson.class, new Integer(1));
+		person = (OrgPerson) this.hibernateTemplate.get(OrgPerson.class, Integer.valueOf(1));
 		assertThat(person).isNull();
 	}
 }
